--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,11 +18,13 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "leven": "^4.1.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "ngrok": "^5.0.0-beta.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "string-similarity": "^4.0.4",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
