--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,7 +21,9 @@
     "leven": "^4.1.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "ngrok": "^5.0.0-beta.2",
+    "openai": "^5.23.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "string-similarity": "^4.0.4",
