--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,8 @@ web_modules/
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
+__pycache__/
+*.pyc
 
 # Next.js build output
 .next
